# note-ai-workflow-skill

./: .gitignore  README.md  pdf-note-ai-workflow.md
docs/: PROJECT_CONTEXT.md
mcp-server/: README.md  pyproject.toml  server.py
skills/pdf-note-assistant/: SKILL.md
